--- a/proyectos/cursoPrework/demoLiveServer.html
+++ b/proyectos/cursoPrework/demoLiveServer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DEMO LIVE SERVER</title>
+    <title>DEMO PLATZI</title>
 </head>
 <body>
     <p>El desarrollo web es divertido</p>
